--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               but the majority have suffered alteration in some form, by
               injected humour, or randomised words which don't look even
             </p>
-            <button>Explore More</button>
+            <button class="btn-regular">Explore More</button>
           </div>
           <div class="banner-image">
             <img src="images/banner.png" alt="" />
@@ -44,5 +44,36 @@
         </div>
       </div>
     </header>
+    <!-- main section start  -->
+    <main>
+      <div class="container">
+        <!-- Features section  -->
+        <section class="features-section">
+          <div class="team-images">
+            <div><img src="images/team1.png" alt="" /></div>
+            <div><img src="images/team2.png" alt="" /></div>
+            <div><img src="images/team3.png" alt="" /></div>
+            <div><img src="images/team4.png" alt="" /></div>
+          </div>
+          <div class="features">
+            <div>
+              <h1>
+                Quick list <span class="of-our">of Our</span>
+                <span class="feature-text">
+                  <br />
+                  Features</span
+                >
+              </h1>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
+              <button class="btn-regular">Explore More</button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
