--- a/index.html
+++ b/index.html
@@ -73,6 +73,65 @@
             </div>
           </div>
         </section>
+
+        <!-- love & enjoy section  -->
+        <section class="love-enjoy">
+          <div class="love-enjoy-features">
+            <h1>
+              Features you will <br />
+              love & enjoy
+            </h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <div class="box-shadow">
+              <h2 class="box-heading">Dexktop & Mobile Version</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="box-shadow">
+              <h2 class="box-heading">Drag & Drop Builder</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="box-shadow">
+              <h2 class="box-heading">Awesome Modern Design</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="box-shadow">
+              <h2 class="box-heading">Super Easy to Edit</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+          </div>
+          <div class="love-section-img">
+            <div>
+              <img src="images/architect.png" alt="" />
+            </div>
+            <div class="love-section-btn">
+              <button class="btn-regular">
+                <span class="btn-text-love">10+Year</span>
+                <br />
+                Experience
+              </button>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
