--- a/index.html
+++ b/index.html
@@ -120,15 +120,44 @@
             </div>
           </div>
           <div class="love-section-img">
-            <div>
-              <img src="images/architect.png" alt="" />
-            </div>
+            <img class="love-image-png" src="images/architect.png" alt="" />
             <div class="love-section-btn">
               <button class="btn-regular">
                 <span class="btn-text-love">10+Year</span>
                 <br />
                 Experience
               </button>
+            </div>
+          </div>
+        </section>
+        <!-- Some Facts -->
+        <section class="fact-section">
+          <h1 class="fact-heading">Some Facts</h1>
+          <p class="fact-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+          <div class="fact-icons">
+            <div class="fact-icon-box">
+              <img src="images/icons/ribon.png" alt="" />
+              <h1 class="fact-box-number">54</h1>
+              <p class="fact-box-description">Awards Winnings</p>
+            </div>
+            <div class="fact-icon-box">
+              <img src="images/icons/projects.png" alt="" />
+              <h1 class="fact-box-number">1458</h1>
+              <p class="fact-box-description">Project Finished</p>
+            </div>
+            <div class="fact-icon-box">
+              <img src="images/icons/customers.png" alt="" />
+              <h1 class="fact-box-number">590</h1>
+              <p class="fact-box-description">Clients Worked</p>
+            </div>
+            <div class="fact-icon-box">
+              <img src="images/icons/email.png" alt="" />
+              <h1 class="fact-box-number">22578</h1>
+              <p class="fact-box-description">Email send</p>
             </div>
           </div>
         </section>
