--- a/index.html
+++ b/index.html
@@ -161,7 +161,41 @@
             </div>
           </div>
         </section>
+        <!-- Our Sponsors  -->
+        <section class="our-projects">
+          <h1 class="fact-heading">Picture of our previous work</h1>
+          <p class="fact-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+          <div class="projects-grid">
+            <div><img src="images/projects/project1.jpg" alt="" /></div>
+            <div><img src="images/projects/project2.jpg" alt="" /></div>
+            <div><img src="images/projects/project3.jpg" alt="" /></div>
+          </div>
+        </section>
+        <!-- Our Sponsors -->
+        <section class="our-sponsor">
+          <h1 class="fact-heading">Our Sponspors</h1>
+          <p class="fact-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+          <div class="sponsor-logo">
+            <div><img src="images/sponsors/spotify.png" alt="" /></div>
+            <div><img src="images/sponsors/amazon.png" alt="" /></div>
+            <div><img src="images/sponsors/google.png" alt="" /></div>
+            <div><img src="images/sponsors/telerama.png" alt="" /></div>
+            <div><img src="images/sponsors/figma.png" alt="" /></div>
+          </div>
+        </section>
       </div>
     </main>
+    <!-- footer section  -->
+    <footer>
+      <div class="container"></div>
+    </footer>
   </body>
 </html>
