--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
     </main>
     <!-- footer section  -->
     <footer>
-      <div class="container"></div>
+      <div class="container">
+        <p class="footer-text">
+          All rights reserved copyright © 2023 startup landing page design
+        </p>
+      </div>
     </footer>
   </body>
 </html>
